@@ -167,8 +167,8 @@ const char* MP4_ChannelConfiguration[]=
     "L C R",
     "Front: L C R, Rear: C",
     "Front: L C R, Rear: L R",
-    "Front: L R,   Rear: L R, Subwoofer",
-    "Front: L C R, Middle: L C R, Surround: L R, Subwoofer",
+    "Front: L R,   Rear: L R, LFE",
+    "Front: L C R, Middle: L C R, Surround: L R, LFE",
     "",
     "",
     "",
